# bulletproofs-sgx

./: Cargo.toml
benches/: range_proof.rs
src/: lib.rs
src/proofs/: inner_product.rs  mod.rs  range_proof.rs  range_proof_wip.rs  weighted_inner_product.rs
