[package]
name = "bulletproof"
version = "1.1.6"
authors = [
    "Omer Shlomovits <omer@kzencorp.com>",
    "Suyash Bagad <suyashnbagad1997@gmail.com>"
]

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
itertools = { version = "0.7.8", default-features = false }
serde = { version = "1.0", git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }
serde_derive = { version = "1.0", git = "https://github.com/mesalock-linux/serde-sgx" }
curv = { git = "https://github.com/sgx-test/curv-sgx", branch = "0.7.0-nosecp", version = "0.7", features = ["num-bigint"] }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
#[dev-dependencies]
#criterion = "0.2"

[features]
default = ["curv/num-bigint","mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]

[[bench]]
name = "range_proof"
path = "benches/range_proof.rs"
harness = false
